syntax = "proto3";

package backup;

import "google/protobuf/empty.proto";

service BackupService {
  rpc CreateNewBackup(stream CreateNewBackupRequest) returns (stream CreateNewBackupResponse) {}
  rpc SendLog(stream SendLogRequest) returns (google.protobuf.Empty) {}
  rpc PullBackupKey(stream PullBackupKeyRequest) returns (stream PullBackupKeyResponse) {}
  rpc PullCompaction(stream PullCompactionRequest) returns (stream PullCompactionResponse) {}
}

// Helper types

message FullAuthenticationRequestData {
  bytes requestBytes = 1;
  string userID = 2;
}

message SimpleAuthenticationRequestData {
  string backupID = 1;
  string userID = 2;
}

// CreateNewBackup

message CreateNewBackupRequest {
  oneof data {
    FullAuthenticationRequestData authenticationData = 1;
    bytes newEncryptedKey = 2;
    bytes newCompactionChunk = 3;
  }
}

message CreateNewBackupResponse {
  oneof data {
    bytes responseBytes = 1;
    string backupID = 2;
  }
}

// SendLog

message SendLogRequest {
  SimpleAuthenticationRequestData authenticationData = 1;
  bytes logData = 2;
}

// PullBackupKey

message PullBackupKeyRequest {
  FullAuthenticationRequestData authenticationData = 1;
}

message PullBackupKeyResponse {
  oneof data {
    bytes responseBytes = 1;
    bytes encryptedBackupIDAndKey = 2;
  }
}

// PullCompaction

message PullCompactionRequest {
  SimpleAuthenticationRequestData authenticationData = 1;
}

message PullCompactionResponse {
  oneof data {
    bytes compactionChunk = 1;
    bytes logChunk = 2;
  }
}
